# Multifact-V3

./: .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  Procfile  README.md  package-lock.json  pyproject.toml  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/ISSUE_TEMPLATE/test-failures/: compilation-assertions.md  foreign-key-violations.md  token-uuid-uniqueness.md
.github/workflows/: docs.yml
backend/: main.py  requirements.txt
backend/api/: compilation.py  debug_routes.py  generate.py  ni.py  test_api.py  token.py  user_intervention.py
backend/application/dto/: llm_model.py  ni_document.py  ni_token.py
backend/application/interfaces/: iartifact_repository.py  icompilation_service.py  idocument_repository.py  illm_service.py  itoken_repository.py  ivalidation_service.py
backend/application/services/: code_evaluation_service.py  dependency_graph_service.py  document_updater.py  exceptions.py  ni_orchestrator.py  self_repair_service.py  token_compiler.py  token_diff_service.py  tokenization_service.py
backend/domain/: model_types.py  models.py
backend/entities/: __init__.py  compiled_multifact.py  ni_document.py  ni_token.py
backend/infrastructure/entities/: compiled_multifact.py  ni_document.py  ni_token.py
backend/infrastructure/llm/: base_llm_client.py  client_factory.py  groq_llm_client.py  llm_service_impl.py  model_factory.py  openai_llm_client.py
backend/infrastructure/parsing/: advanced_token.py  token_tree_builder.py
backend/infrastructure/repositories/: artifact_repository.py  document_repository.py  token_repository.py
backend/infrastructure/services/: artifact_cache_service.py  code_fixer_service.py  compilation_service.py
backend/infrastructure/validation/: validation_service.py
backend/models/: compiled_multifact.py  llm_model.py  ni_document.py  ni_token.py  token_types.py
backend/script/: benchmark_all_models.py  benchmark_compare_two_models.py  compare_benchmarks.py  reset_demo.py  reset_testing.py
backend/services/: artifact_cache.py  compilation.py  llm_client.py  ni.py  ni_service.py  self_repair.py  tokenization.py  user_intervention.py  validation.py
backend/services/llm/: base_llm_client.py  groq_llm_client.py  model_factory.py  openai_llm_client.py
backend/services/validation/: validation_service.py
backend/test/: conftest.py  fixtures.py
backend/test/services/: conftest.py  core_data.py  demo_data.py  fixtures.py  test_all.py  test_compilation.py  test_llm_performance.py  test_ni.py  test_validation.py
backend/test/test_domain/: test_domain_document.py  test_domain_model.py  test_domain_multifact.py  test_domain_token.py
backend/test/test_integration/: test_code_evaluation_flow.py  test_ni_to_compilation_e2e.py
backend/test/test_performance/: test_llm_performance.py  test_performance_data.py
backend/utils/: token_key_util.py
benchmark/all_models/2024-12-19_00-06-43/: benchmark_groq_gemma2-9b-it.json  benchmark_groq_llama-3.1-8b-instant.json  benchmark_groq_llama-3.3-70b-versatile.json  benchmark_groq_llama-guard-3-8b.json  benchmark_groq_llama3-70b-8192.json  benchmark_openai_gpt-4o-mini.json  benchmark_openai_gpt-4o.json
benchmark/archive/2024-12-18_00-59-12/: benchmark_openai.json
benchmark/archive/2024-12-18_01-10-30/: benchmark_openai.json
benchmark/archive/2024-12-18_19-03-18/: benchmark_openai.json
benchmark/archive/2024-12-18_19-35-58/: benchmark_comparison_report.csv  benchmark_groq.json  benchmark_openai.json
benchmark/archive/v2/: benchmark_comparison_report.csv  benchmark_groq_gemma2-9b-it.json  benchmark_openai_gpt-4o.json
docs/: conf.py  database.md  make.py  ni.md
docs/source/: cli.md  compatibility.md  conf.py  contributing.md  index.md  index.rst  performance.md  troubleshooting.md
docs/source/api/: index.rst  orchestrator.md
docs/source/tutorials/: index.md
examples/: basic_usage.py  quickstart.py  stress_test.py
frontend/: angular.json  package-lock.json  package.json  tailwind.config.js
frontend/src/: styles.scss
frontend/src/app/: app-routing.module.ts  app.component.html  app.component.ts  app.module.ts
snc/: __init__.py  config.py  database.py  main.py
snc/api/: debug_routes.py  test_api.py
snc/application/: token_compiler.py
snc/application/dto/: compiled_multifact.py  llm_model.py  ni_document.py  ni_token.py
snc/application/interfaces/: iartifact_repository.py  icode_evaluation_service.py  icode_fixer_service.py  icompilation_service.py  idocument_repository.py  illm_client.py  illm_service.py  itoken_repository.py  ivalidation_service.py
snc/application/repositories/: artifact_repository.py
snc/application/services/: code_evaluation_service.py  dependency_graph_service.py  document_updater.py  exceptions.py  ni_orchestrator.py  self_repair_service.py  token_compiler.py  token_diff_service.py  tokenization_service.py
snc/cli/: config_cmd.py  main.py  setup_cmd.py  validate_cmd.py
snc/config/: __init__.py  validation.py
snc/domain/: __init__.py  client_types.py  model_types.py  models.py
snc/domain/models/: __init__.py  artifact.py  document.py  token.py
snc/domain/repositories/: __init__.py  artifact.py
snc/infrastructure/: logging_config.py
snc/infrastructure/db/: engine.py  session.py
snc/infrastructure/entities/: __init__.py  compiled_multifact.py  entity_base.py  ni_document.py  ni_relationships.py  ni_token.py
snc/infrastructure/llm/: base_llm_client.py  client_factory.py  groq_llm_client.py  llm_service_impl.py  mock_llm_client.py  model_factory.py  openai_llm_client.py
snc/script/: create_database.py  delete_database.py  generate_migration.py  repl.py  reset_base.py  reset_demo.py  reset_testing.py
snc/test/: conftest.py  fixtures.py
snc/test/test_cli/: conftest.py  (+2 more)
tools/benchmark/: __init__.py  benchmark_all_models.py  benchmark_compare_two_models.py  compare_benchmarks.py  run_performance.py
(+140 files in other folders)
